@@ -2,6 +2,8 @@ Revision history for Test-Deep=UnorderedPairs
 
 {{$NEXT}}
           - keep secondary cookoo packages out of the PAUSE index
+          - main package is split into two packages, so we do not have a
+            package that both inherits and is an exporter
 
 0.005     2015-06-07 01:21:53Z
           - fix PAUSE indexing issue due to missing $VERSIONs in supplementary
